--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.3",
     "chart.js": "^3.8.0",
+    "eslint": "8.22.0",
     "history": "^5.3.0",
     "localStorage": "^1.0.4",
     "react": "^18.1.0",
